--- a/dotNet5781_02_8658_4874/dotNet5781_02_8658_4874.csproj
+++ b/dotNet5781_02_8658_4874/dotNet5781_02_8658_4874.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="BusStation.cs" />
     <Compile Include="BusLineStation.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="ListEmptyException.cs" />
     <Compile Include="ListLineBus.cs" />
     <Compile Include="LineBus.cs" />
     <Compile Include="Program.cs" />
