--- a/dotNet5781_00_8658_4874/dotNet5781_00_8658_4874.csproj
+++ b/dotNet5781_00_8658_4874/dotNet5781_00_8658_4874.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F5C9C06E-47F0-4CCB-8F26-1117D081A513}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>dotNet5781_8658_4874</RootNamespace>
-    <AssemblyName>dotNet5781_8658_4874</AssemblyName>
+    <RootNamespace>dotNet5781_00_8658_4874</RootNamespace>
+    <AssemblyName>dotNet5781_00_8658_4874</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
