--- a/dotNet5781_03b_8658_4874/dotNet5781_03b_8658_4874.csproj
+++ b/dotNet5781_03b_8658_4874/dotNet5781_03b_8658_4874.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D394BF5B-C123-4D73-8257-F24F1FC7E839}</ProjectGuid>
+    <ProjectGuid>{39405761-5993-45AA-A703-65B7030EC8D4}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>dotNet5781_03a_8658_4874</RootNamespace>
-    <AssemblyName>dotNet5781_03a_8658_4874</AssemblyName>
+    <RootNamespace>dotNet5781_03b_8658_4874</RootNamespace>
+    <AssemblyName>dotNet5781_03b_8658_4874</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -55,6 +55,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Window1.xaml.cs">
+      <DependentUpon>Window1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window2.xaml.cs">
+      <DependentUpon>Window2.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -67,6 +73,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Window1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -95,9 +109,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\dotNet5781_02_8658_4874\dotNet5781_02_8658_4874.csproj">
-      <Project>{818d7d69-a511-4396-8452-ab9c6fae85f4}</Project>
-      <Name>dotNet5781_02_8658_4874</Name>
+    <ProjectReference Include="..\dotNet5781_01_8658_4874\dotNet5781_01_8658_4874.csproj">
+      <Project>{7d538606-fd97-4454-95ed-149d4e20031d}</Project>
+      <Name>dotNet5781_01_8658_4874</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
