--- a/dotNet5781_01_8658_4874/dotNet5781_01_8658_4874.csproj
+++ b/dotNet5781_01_8658_4874/dotNet5781_01_8658_4874.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Properties\DataSources\Bus.datasource" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
