--- a/dotNet5781_03b_8658_4874/dotNet5781_03b_8658_4874.csproj
+++ b/dotNet5781_03b_8658_4874/dotNet5781_03b_8658_4874.csproj
@@ -124,5 +124,8 @@
       <Name>dotNet5781_01_8658_4874</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="logo.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
