--- a/DLAPI/DLAPI.csproj
+++ b/DLAPI/DLAPI.csproj
@@ -42,11 +42,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusException.cs" />
+    <Compile Include="BusInTravelDAO.cs" />
+    <Compile Include="BusLineDAO.cs" />
+    <Compile Include="BusStationDAO.cs" />
+    <Compile Include="LineStationDAO.cs" />
+    <Compile Include="PairConsecutiveStationsDAO.cs" />
+    <Compile Include="ExitLineDAO.cs" />
+    <Compile Include="Status.cs" />
     <Compile Include="DalConfig.cs" />
     <Compile Include="DLFactory.cs" />
-    <Compile Include="DO.cs" />
+    <Compile Include="BusDAO.cs" />
     <Compile Include="IDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
