--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -43,9 +43,15 @@
   <ItemGroup>
     <Compile Include="BLIMP.cs" />
     <Compile Include="BLFactory.cs" />
-    <Compile Include="BO.cs" />
+    <Compile Include="BusBO.cs" />
+    <Compile Include="BusLineBO.cs" />
+    <Compile Include="BusStationBO.cs" />
+    <Compile Include="exacptionBO.cs" />
+    <Compile Include="PairConsecutiveStationsBO.cs" />
+    <Compile Include="Status.cs" />
     <Compile Include="IBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DLAPI\DLAPI.csproj">
