--- a/DLAPI/DLAPI.csproj
+++ b/DLAPI/DLAPI.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BusException.cs" />
+    <Compile Include="Exception.cs" />
     <Compile Include="BusInTravelDAO.cs" />
     <Compile Include="BusLineDAO.cs" />
     <Compile Include="BusStationDAO.cs" />
