--- a/DalObject/DalObject.csproj
+++ b/DalObject/DalObject.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ADEFA606-1BF7-4309-A7C9-AD1DF6E8225A}</ProjectGuid>
+    <ProjectGuid>{AE84C83E-36A7-4E3A-834E-BDDC6F03F87D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DL</RootNamespace>
-    <AssemblyName>DL</AssemblyName>
+    <RootNamespace>DalObject</RootNamespace>
+    <AssemblyName>DalObject</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cloning.cs" />
-    <Compile Include="DLObject.cs" />
+    <Compile Include="cloning.cs" />
+    <Compile Include="DalObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
