--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools.cs" />
+    <Compile Include="UserBO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DalObject\DalObject.csproj">
