--- a/DLAPI/DLAPI.csproj
+++ b/DLAPI/DLAPI.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools.cs" />
+    <Compile Include="UserDAO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
