--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -50,6 +50,7 @@
     <Compile Include="exacptionBO.cs" />
     <Compile Include="LineInAreaBO.cs" />
     <Compile Include="LineInStationBO.cs" />
+    <Compile Include="LineTimingBO.cs" />
     <Compile Include="MiniStationBO.cs" />
     <Compile Include="PairConsecutiveStationsBO.cs" />
     <Compile Include="TripBO.cs" />
