--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -51,6 +51,7 @@
     <Compile Include="LineInAreaBO.cs" />
     <Compile Include="LineInStationBO.cs" />
     <Compile Include="LineTimingBO.cs" />
+    <Compile Include="LineTripBO.cs" />
     <Compile Include="MiniStationBO.cs" />
     <Compile Include="PairConsecutiveStationsBO.cs" />
     <Compile Include="TripBO.cs" />
