--- a/UIwpf/UIwpf.csproj
+++ b/UIwpf/UIwpf.csproj
@@ -264,5 +264,8 @@
       <Name>BL</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="לוגו.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
